--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row">
-
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <h2>Editing Meeting</h2>
+
       <%= render 'form' %>
 
       <%= link_to 'Show', @meeting %> |
