--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="row">
+  <p class="alert"><%= alert %></p>
 
     <h2>New Meeting</h2>
+    <p class="notice"><%= notice %></p>
+
 
     <%= render 'form' %>
   </div>
