--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -19,23 +19,19 @@
           <th class='well'>Company</th>
           <th>Hours Until Next Meeting</th>
           <th class='well'>Available</th>
-          <th colspan='3'></th>
         </tr>
       </thead>
 
       <tbody>
         <% @rooms.each do |room| %>
           <tr>
-            <td class='well'><%= link_to room.name, room %></td>`
+            <td class='well'><%= link_to room.name, room %></td>
             <td><%= room.location %></td>
             <td class='well'><%= room.company.name %></td>
             <td><%= room.hours_until_next_meeting %></td>
             <td class='well'><%= room.available ? 'yes' : 'no' %></td>
-            <td><%= link_to 'Show', room %></td>
-            <td class='well'><%= link_to 'Edit', edit_room_path(room) %></td>
-            <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-        <% end %>
+          <% end %>
+        </tr>
       </tbody>
     </table>
     </div>
