--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -13,7 +13,7 @@ It should show the title, and the photo for each room. -->
     <table class="table">
       <thead>
         <tr>
-          <th>Meetings</th>
+          <th>Topics</th>
           <th>Time</th>
         </tr>
       </thead>
@@ -34,7 +34,7 @@ It should show the title, and the photo for each room. -->
       <p><strong>Location: </strong> <%=@room.location%></p>
       <p><strong>Occupancy: </strong><%= @room.max_occupancy %></p>
       <p><strong>Room Number: </strong><%= @room.room_number%></p>
-      <p><strong>Amenity </strong><% @room.amenities.each do |amenity|%> <%= amenity.perk %><% end %></p>
+      <p><strong>Amenity: </strong><% @room.amenities.each do |amenity|%> <%= amenity.perk %> <% end %></p>
 
 </div>
   </div>
