--- a/app/views/admin/reports_meetings.html.erb
+++ b/app/views/admin/reports_meetings.html.erb
@@ -21,7 +21,7 @@
             <td><%= reports_meeting.agenda %></td>
             <td><%= reports_meeting.start_time %></td>
             <td><%= reports_meeting.end_time %></td>
-            <td>PRIVATE</td>
+            <td><%= reports_meeting.private %></td>
             <td><%= reports_meeting.room_id %></td>
             <td><%= reports_meeting.employee_id %></td>
           </tr>
