--- a/app/views/admin/reports_rooms.html.erb
+++ b/app/views/admin/reports_rooms.html.erb
@@ -1,10 +1,7 @@
-
-
 <div class="report-inner">
   <h1>TOP ROOMS</h1>
     <table class="report-container">
       <table id="top_rooms">
-
         <thead>
           <tr>
             <th>NAME</th>
@@ -15,11 +12,14 @@
         </thead>
 
         <tbody>
-          <tr>
-<%= @top_rooms %>
+          <tr><% @top_rooms.each do |top_rooms| %>
+            <td><%= top_rooms.first.name %></td>
+            <td><%= top_rooms.first.max_occupancy %></td>
+            <td><%= top_rooms.first.imgurl %></td>
+            <td><%= top_rooms.first.location %></td>
           </tr>
-        </tbody>
-
+        <% end %>
+      </tbody>
     </table>
   </table>
 </div>
@@ -42,16 +42,15 @@
         </thead>
 
         <tbody>
-          <tr>
-            <% @reports_rooms.each do |reports_rooms| %>
+          <tr><% @reports_rooms.each do |reports_rooms| %>
             <td><%= reports_rooms.name %></td>
             <td><%= reports_rooms.max_occupancy %></td>
             <td><%= reports_rooms.room_number %></td>
             <td><%= reports_rooms.imgurl %></td>
             <td><%= reports_rooms.location %></td>
           </tr>
-        </tbody>
         <% end %>
+      </tbody>
     </table>
   </table>
 </div>
