--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -21,7 +21,7 @@
     </div>
 
     <div class="col-md-6">
-      <h3>Attendees</h3>
+      <h3>Attendees (<%=@attendees.count%>) </h3>
       <ul>
         <% @attendees.each do |attendee| %>
             <li><%= link_to attendee.name, attendee %></li>
