Adding datetimepicker to meetings.
Also updated the javascript for date formatting

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 //You need to now manually import every other scss file.
+@import 'datetimepicker';
 @import 'admin';
 @import 'dataTables/jquery.dataTables';
 @import 'scaffolds.scss';
@@ -8,22 +9,22 @@
 //You need to now manually import every other scss file.
 .center{
   text-align: center;
-};
+}
 
 .pull-right{
   margin-right: 20px;
-};
+}
 
 .margin-top{
   margin-top: 15px;
-};
+}
 .margin-bottom{
   margin-bottom: 15px;
-};
+}
 
 .panel-body{
   font-size: 16px;
-};
+}
 
 .room-search{
   padding: 5px;
