--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -24,11 +24,12 @@
   </div>
   <div class="field">
     <%= f.label :start_time %><br>
-    <%= f.datetime_select :start_time %>
+    <%= f.text_field :start_time, class: 'datetimepicker' %>
   </div>
   <div class="field">
     <br>
-    <%= f.datetime_select :end_time %>
+    <%= f.label :end_time %><br>
+    <%= f.text_field :end_time, class: 'datetimepicker' %>
   </div>
   <div class="field">
     <%= f.label :private %><br>
