converted rooms index page to react component table

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -23,8 +23,8 @@
       <tr>
         <td class="well"><%= room.name %></td>
         <td><%= room.location %></td>
-        <td class="well"><%= room.available %></td>
-        <td><%= room.hours_until_next_meeting %></td>
+        <td class="well"><%= "N/A" %></td>
+        <td><%= "N/A" %></td>
         <td class="well"><%= link_to 'Show', room %></td>
         <% if user_is_admin? %>
           <td><%= link_to 'Edit', edit_room_path(room) %></td>
