added ability to edit branding

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -15,6 +15,21 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+    <div class="field">
+    <%= f.label :logo %><br>
+    <%= f.text_field :logo %>
+  </div>
+
+  <div class="field">
+    <%= f.label :primary_color %><br>
+    <%= f.text_field :primary_color %>
+  </div>
+
+  <div class="field">
+    <%=f.label :secondary_color %><br>
+    <%= f.text_field :secondary_color %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
