--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,4 +1,5 @@
 <p id='notice'><%= notice %></p>
+<p id='alert'><%= alert %> </p>
 
 <div class='row pull-right margin-top'>
   <form action='/search/rooms' method='GET'>
