--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,6 +6,7 @@
 @import 'dataTables/jquery.dataTables';
 @import 'scaffolds.scss';
 @import 'rooms';
+@import 'employee';
 //You need to now manually import every other scss file.
 .center{
   text-align: center;
