--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,12 +16,14 @@
 }
 
 .margin-top{
-  margin-top: 15px;
+  margin-top: 10px;
 }
 .margin-bottom{
   margin-bottom: 15px;
 }
-
+.margin-right{
+  margin-right: 52px;
+}
 .panel-body{
   font-size: 16px;
 }
