--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -1,8 +1,9 @@
 <p id='notice'><%= notice %></p>
 
-  <div class='row pull-right margin-top'>
+  <div class='row pull-right margin-top well margin-right'>
     <form action='/search/rooms' method='GET'>
-      <input type='text' name='search'/>
+      <input type='text' name='search'
+             placeholder="Room name, location, or amenity" size="30"/>
       <input type='submit' value='Search' class='btn btn-primary' />
     </form>
   </div>
@@ -10,7 +11,7 @@
   <div class='row'>
     <p id='notice'><%= notice %></p>
 
-<h1>Search Results for <i class="results"><%= params[:search].titleize %></i></h1>
+<h1 class="col-md-6">Search Results for <i class="results"><%= params[:search].titleize %></i></h1>
 <%= react_component("RoomsTable", { rooms_array: @rooms_array, page: 1, limit: 10 }) %>
 
 <div class="container">
