--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="row pull-right margin-top">
     <form action='/search/meetings' method='GET'>
-      <input type='text' name='search'/>
+      <input type='text' name='search' placeholder="Meeting title or agenda"/>
       <input type='submit' value='Search' class="btn btn-primary" />
     </form>
   </div>
