Created 'Busiest_Employees' page
Route created for 'Busiest_Employees' page

Routes re-raked & reference placed at bottom of Routes page

--- a/app/views/admin/reports_rooms.html.erb
+++ b/app/views/admin/reports_rooms.html.erb
@@ -12,7 +12,8 @@
         </thead>
 
         <tbody>
-          <tr><% @top_rooms.each do |top_rooms| %>
+          <% @top_rooms.each do |top_rooms| %>
+            <tr>
             <td><%= top_rooms.first.name %></td>
             <td><%= top_rooms.first.max_occupancy %></td>
             <td><%= top_rooms.first.imgurl %></td>
