--- a/app/views/admin/reports_meetings.html.erb
+++ b/app/views/admin/reports_meetings.html.erb
@@ -15,17 +15,12 @@
         </thead>
 
         <tbody>
-          <tr>
-            <% @reports_meetings.each do |reports_meeting| %>
+          <% @reports_meetings.each do |reports_meeting| %>
+            <tr>
             <td><%= reports_meeting.title %></td>
             <td><%= reports_meeting.agenda %></td>
-            <td>
-            <div class='timeDisplay'>
-              <%= reports_meeting.start_time %>
-            </div>
-            </td>
+            <td><%= reports_meeting.start_time %></td>
             <td><%= reports_meeting.end_time %></td>
-
             <td><%= reports_meeting.private %></td>
             <td><%= reports_meeting.room_id %></td>
             <td><%= reports_meeting.employee_id %></td>
