--- a/app/views/employees/employee_search.html.erb
+++ b/app/views/employees/employee_search.html.erb
@@ -34,7 +34,7 @@
 
     <div class="well center">
       <form action='/search/employees' method='GET'>
-        <input type='text' name='search'/>
+        <input type='text' name='search' placeholder="Employee name or email"/>
         <input type='submit' value='Search' class="btn btn-primary" />
       </form>
     </div>
