fixed employee search page, better descripts and copies

--- a/app/views/employees/employee_search.html.erb
+++ b/app/views/employees/employee_search.html.erb
@@ -1,6 +1,6 @@
  <div class="container">
   <h2 class="center">Search Results for
-  <i class="search-results"><%= params[:search] %></i> in <%= current_employee.company.name %>
+  <i class="results"><%= params[:search] %></i> in <%= current_employee.company.name %>
   </h2>
   <% if @employee_results.count > 0 %>
       <section class='panel panel-default'>
@@ -29,7 +29,9 @@
     <div class="center"><%= will_paginate @employee_results, renderer: BootstrapPagination::Rails %></div>
 
     <% else %>
-      <p>No results found for your search.</p>
+      <p>No results found for
+        <i class="search-results"><%= params[:search].titleize %></i> search.
+      </p>
     <% end %>
 
     <div class="well center">
