--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="row pull-right margin-top">
     <form action='/search/employees' method='GET'>
-      <input type='text' name='search'/>
+      <input type='text' name='search' placeholder="Employee name or email" size="30"/>
       <input type='submit' value='Search' class="btn btn-primary" />
     </form>
   </div>
