Added jquery.ui.core & jquery.ui.theme to application.CSS

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,7 +4,7 @@
 @import 'admin';
 @import 'dataTables/jquery.dataTables';
 @import 'jquery.ui.core';
-@import 'jquery'
+@import 'jquery.ui.theme';
 @import 'scaffolds.scss';
 @import 'rooms';
 @import 'employee';
