moved buttons to under meeting title

--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -7,11 +7,15 @@
   <row>
     <div class="col-md-12">
       <h2><%= @meeting.title.capitalize %></h2>
-    </div>
+      <div class="meeting-buttons">
+        <%= link_to 'Join', join_employee_path(@meeting.id), method: 'POST', class: 'btn btn-default' %>
+        <%= link_to 'Edit', edit_meeting_path(@meeting), class: "btn btn-default" %>
+        <%= link_to 'Back', meetings_path, class: "btn btn-default" %>
+      </div>
   </row>
 
     <div class="col-md-5">
-      <h3>Meeting details</h3>
+      <h3>Meeting Details:</h3>
           <strong>Location:</strong> <p><%= link_to @meeting.room.name, @meeting.room %></p>
           <strong>Start time:</strong><p class="timeDisplay"> <%= @meeting.start_time %></p>
           <strong>End time:</strong><p class="timeDisplay"> <%= @meeting.end_time %></p>
@@ -19,7 +23,7 @@
     </div>
 
     <div class="col-md-6 col-md-offset-1">
-      <h3>Agenda</h3>
+      <h3>Agenda:</h3>
       <div>
         <p><%= @meeting.agenda %></p>
       </div>
@@ -27,7 +31,7 @@
 
   <row>
     <div class="col-md-6 col-md-offset-1">
-      <h3>Attendees (<%=@attendees.count%>) </h3>
+      <h3>Attending(<%=@attendees.count%>):</h3>
       <ul>
         <% @attendees.each do |attendee| %>
             <li><%= link_to attendee.name, attendee %></li>
@@ -38,14 +42,6 @@
   </row>
 
   </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-6 meeting-buttons">
-      <%= link_to 'Join', join_employee_path(@meeting.id), method: 'POST', class: 'btn btn-default' %>
-      <%= link_to 'Edit', edit_meeting_path(@meeting), class: "btn btn-default" %>
-      <%= link_to 'Back', meetings_path, class: "btn btn-default" %>
-    </div>
   </div>
 
   <% if @meeting_owner == true %>
