showwing all meeting invites for real

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
     <li role="presentation"><a href="/rooms/new">Create a Room</a></li>
     <li role="presentation"><a href="/meetings/new">Create a new Meeting</a></li>
     <li role="presentation"><a href="/admin">Reports</a></li>
+    <li role="presentation"><a href="/meetings/view_invites">Meeting invites</a></li>
   </ul>
 <% end %>
   <!-- <p class="notice"><%= notice %></p>
