changed back button

--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -10,7 +10,7 @@
       <div class="meeting-buttons">
         <%= link_to 'Join', join_employee_path(@meeting.id), method: 'POST', class: 'btn btn-default' %>
         <%= link_to 'Edit', edit_meeting_path(@meeting), class: "btn btn-default" %>
-        <%= link_to 'Back', meetings_path, class: "btn btn-default" %>
+        <%= link_to 'Back to Meetings', meetings_path, class: "btn btn-default" %>
       </div>
   </row>
 
