--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/rooms">CRS2000</a>
+      <a class="navbar-brand" href="/rooms">
+        <img alt="Brand" src="...">
+      </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
