added branded color bottom border to navbar

--- a/app/views/admin/add_branding.html.erb
+++ b/app/views/admin/add_branding.html.erb
@@ -8,7 +8,7 @@
 
   <div class="field">
     <%= f.label :primary_color %>
-    <%= f.text_field :primary_color %>
+    <%= f.color_field :primary_color %>
   </div>
 
   <div class="field">
