--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -67,4 +67,13 @@
   font-weight: bold;
 }
 
+footer {
+  margin-top: 20px;
+  background: #F8F8F8;
+  width: 100%;
+  text-align: center;
+} p {
+  margin-bottom: 0px;
+  padding: 10px 0;
+}
 
