--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,17 @@
       .btn.btn-default {
         background: <%= current_employee.company.secondary_color %>;
       }
+      .pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus, .pagination > .active > span, .pagination > .active > span:hover, .pagination > .active > span:focus {
+        background: <%= current_employee.company.primary_color %> ;
+        border-color: <%= current_employee.company.primary_color %>;
+      }
+      .pagination > li > a, .pagination > li > span {
+        color: <%= current_employee.company.primary_color %>;
+      }
+      footer {
+        border-top: 5px solid black;
+        border-top-color: <%= current_employee.company.primary_color %>;
+      }
     </style>
 </head>
 <body>
@@ -67,6 +78,10 @@
   <p class="alert"><%= alert %></p> -->
 
 <%= yield %>
+
+<footer>
+  <p>CRS2000 by RustWorks &copy; 2015</p>
+</footer>
 
 </body>
 </html>
