--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -9,13 +9,10 @@
       <input type='submit' value='Search' class='btn btn-primary' />
     </form>
   </div>
-  <% if params[:search] %>
-    <h1 class="col-md-6">Search Results for
-      <i class="results"><%= params[:search].titleize %></i>
-    </h1>
-  <% else %>
-    <h1 class="col-md-6">Search Results</h1>
-  <% end %>
+
+  <h1 class="col-md-6">Search Results for
+    <i class="results"><%= params[:search].titleize %></i>
+  </h1>
   <%= react_component("RoomsTable", { rooms_array: @rooms_array, page: 1, limit: 10 }) %>
   <div class="row">
     <div class="col-md-9"></div>
@@ -27,6 +24,14 @@
           </div>
           <div class='col-md-8 align-left'>
             <input type='text' size= '12' name='name'/>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-md-4 align-right'>
+            company
+          </div>
+          <div class='col-md-8 align-left'>
+            <input type='text' size= '12' name='company_name'/>
           </div>
         </div>
         <div class='row'>
