fixed type :octopus:

--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="field">
     <%= f.label :agenda %><br>
-    <%= f.text_field :agenda %>
+    <%= f.text_area :agenda %>
   </div>
   <div class="field">
     <%= f.label :room_id %><br>
