--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -18,7 +18,7 @@
         <tr>
           <th class='well'>Title</th>
           <th>Room</th>
-          <th class='well'>Agena</th>
+          <th class='well'>Agenda</th>
           <th>Start Time</th>
           <th class = 'well'>End Time</th>
         </tr>
