removed primary buttons visited color

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -67,6 +67,10 @@
   font-weight: bold;
 }
 
+.new-meeting-button:visited {
+  color: white;
+}
+
 footer {
   margin-top: 20px;
   background: #F8F8F8;
