--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,14 @@
         border-bottom: 5px solid black;
         border-bottom-color: <%= current_employee.company.primary_color %>;
       }
-      .btn.btn-default {
-        background: <%= current_employee.company.secondary_color %>;
+      .btn-primary {
+        background: <%= current_employee.company.primary_color %>;
+        border-color: <%= current_employee.company.primary_color %>;
+      }
+      .btn-primary:hover {
+        background: <%= current_employee.company.primary_color %>;
+        border-color: <%= current_employee.company.primary_color %>;
+        color: <%= current_employee.company.secondary_color %>;
       }
       .pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus, .pagination > .active > span, .pagination > .active > span:hover, .pagination > .active > span:focus {
         background: <%= current_employee.company.primary_color %> ;
