added form for new invites

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,7 @@
 @import 'scaffolds.scss';
 @import 'rooms';
 @import 'employee';
+@import 'invitations';
 //You need to now manually import every other scss file.
 .center{
   text-align: center;
