all buttons have colro white and background primary brand color

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -67,7 +67,15 @@
   font-weight: bold;
 }
 
-.new-meeting-button:visited {
+.btn {
+  color: white;
+}
+
+.btn:visited {
+  color: white;
+}
+
+.btn:visited {
   color: white;
 }
 
