--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -42,7 +42,7 @@
       <%= will_paginate @meetings, renderer: BootstrapPagination::Rails %>
     </div>
     <div class="center margin-bottom">
-      <%= link_to 'New Meeting', new_meeting_path, class: "btn btn-primary new-meeting-button" %>
+      <%= link_to 'New Meeting', new_meeting_path, class: "btn btn-primary" %>
     </div>
   </div>
 </div>
