--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -23,5 +23,14 @@
       <div class="panel-heading"><h3 class='panel-title'>All Scheduled Meetings</h3></div>
       <div class='panel-body dash-field'><%= @all_future_meetings.count %></div>
     </div>
+    <div class="row">
+      <div class='col-md-4 col-md-offset-5'>
+
+         <div class="btn-default">
+            <%= link_to 'PDF Info', 'admin/room_report', class: "btn btn-primary btn-lg" %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
