--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,24 +1,34 @@
 <div class="container">
 
   <div class="row">
-    <div class="employee-details">
-      <h2><%= @employee.name %></h2>
-      <h3><%= link_to @employee.company.name, @employee.company %></h3>
-        <h4>Employee details</h4>
-        <p><strong>Email: </strong><%= @employee.email %></p>
+      <div class="employee-details col-md-6">
+        <h2><%= @employee.name %></h2>
+        <h3><%= link_to @employee.company.name, @employee.company %></h3>
+          <h4>Employee details</h4>
+          <p><strong>Email: </strong><%= @employee.email %></p>
+      </div>
+      <div class='employee-details col-md-6'>
+        <h4>Next Meeting</h4>
+        <% m = @employee.next_mtn %>
+        <p><%= m %></p>
+      </div>
     </div>
-    <div class="employee-details">
-      <h4>Meeting participation</h4>
-      <ul>
-        <% @employee.meetings.each do |meeting| %>
-
-          <li><%= link_to meeting.title, meeting %></li>
-
-        <% end %>
-      </ul>
+    <div class="row">
+      <div class="employee-details col-md-6">
+        <h4>Meeting participation</h4>
+        <ul>
+          <% @employee.meetings.each do |meeting| %>
+            <li><%= link_to meeting.title, meeting %></li>
+          <% end %>
+          <% @employee.viewable_meetings.each do |meeting| %>
+            <li><%= link_to meeting.title, meeting %></li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   </div>
   <div class="row">
+  <div class="col-md-2 col-md-offset-2"
     <% if current_employee.id == @employee.id %>
       <%= link_to 'Edit', edit_employee_path(@employee), class: "btn btn-success" %>
     <% else %>
