--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -19,7 +19,6 @@
           <strong>Start time:</strong><p class="timeDisplay"> <%= @meeting.start_time %></p>
           <strong>End time:</strong><p class="timeDisplay"> <%= @meeting.end_time %></p>
           <strong>Max Occupancy:</strong><p> <%= @max_occupancy %></p>
-          <strong>Current Occupancy:</strong><p> <%= @current_occupancy %></p>
     </div>
 
     <div class="col-md-6 col-md-offset-1">
@@ -50,7 +49,25 @@
     <br>
     <br>
     <h2>Invite Employees</h2>
+    <p><strong>Company: </strong><%= link_to @invitees[0].company.name, @invitees[0].company %> </p>
     <% if @invitees.count > 0 %>
+        <div class="well center" style="width:50%">
+            <input type='text' id='search' placeholder="name" />
+            <script>
+              $("#search").on("keyup paste change", function(){
+                  var re = new RegExp(this.value,"i");
+                  $("#invitees tr").each(function(index){
+                      var invitee_name = $("#invitee_name", this).html();
+                      this.hidden = ! re.test(invitee_name);
+                  });
+              });
+            </script>
+        </div>
+
+
+
+
+
         <table class="table" style="width:50%">
           <thead>
           <tr>
@@ -58,7 +75,7 @@
             <th>Employee</th>
           </tr>
           </thead>
-          <tbody>
+          <tbody id="invitees">
             <% @invitees.each do |invitee|%>
             <tr>
               <td>
@@ -69,8 +86,7 @@
                 <% end %>
               </td>
               <td>
-                <h5><strong><%= invitee.name %></strong></h5>
-                <p><strong>Company: </strong><%= link_to invitee.company.name, invitee.company %> </p>
+                <h5><strong id="invitee_name"><%= invitee.name %></strong></h5>
                 <p><strong>Email: </strong><%= invitee.email %></p>
               </td>
             </tr>
