attempting to merge latest table component

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -63,6 +63,17 @@
   border: 1px solid orange;
   background-color: #eeeeee;
 }
+
 .results{
   font-weight: bold;
+}
+
+.asc{
+  color: lighten(black, 50%);
+  background-color: darken(white, 20%);
+}
+
+.desc{
+  color: darken(white, 20%);
+  background-color: lighten(black, 50%);
 }
