Tweaked and standardized DataTable formatting for all Reports pages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,15 +50,15 @@
   padding: 20px;
   margin-left: auto;
   margin-right:auto;
-  border: 1px solid orange;
-  background-color: #eeeeee;
+  border: 1px solid #999999;
+  background-color: white;
 }
 
 .report-inner {
   padding: 20px;
   margin: 40px;
-  border: 1px solid orange;
-  background-color: #eeeeee;
+  border: 1px solid #999999;
+  background-color: white;
 }
 
 .results{
