--- a/app/views/admin/busiest_employees.html.erb
+++ b/app/views/admin/busiest_employees.html.erb
@@ -1,7 +1,12 @@
+<!-- DataTables CSS -->
+<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.css">
+
+<!-- DataTables -->
+<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+
 <div class="report-inner">
   <h1>BUSIEST EMPLOYEES</h1>
-    <table class="report-container">
-      <table id="busiest_employees">
+      <table id="busiest_employees" class="table display">
         <thead>
           <tr>
             <th>NAME</th>
