--- a/app/views/admin/reports_rooms.html.erb
+++ b/app/views/admin/reports_rooms.html.erb
@@ -8,8 +8,8 @@
 
 <div class="report-inner">
   <h1>TOP ROOMS</h1>
-    <table class="table">
-      <table id="top_rooms">
+    <table display>
+      <table id="top_rooms" class="table display">
         <thead>
 
           <tr>
@@ -74,8 +74,8 @@
 
 <div class="report-inner">
   <h1>ROOMS</h1>
-    <table class="table table-striped table-bordered table-hover">
-      <table id="rooms">
+    <table class="table display">
+      <table id="rooms" class="table display">
 
         <thead>
           <tr>
