--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -82,7 +82,7 @@
                 <% if invitee.invitations.where(meeting_id: @meeting.id).exists? %>
                     <br><p style="font-style: italic">Already invited!</p>
                 <% else %>
-                    <%= link_to 'Invite', invitation_path(@meeting.id, invitee.id), method: 'POST', class: 'btn btn-default' %>
+                    <%= link_to 'Invite', send_invitation_path(@meeting.id, invitee.id), method: 'POST', class: 'btn btn-default' %>
                 <% end %>
               </td>
               <td>
